[gd_scene load_steps=5 format=3 uid="uid://dqg5vfhgvrht0"]

[ext_resource type="Script" path="res://scenes/ui/inventory/inventory_slot_drag_preview.gd" id="2_2mdvm"]
[ext_resource type="Script" path="res://centered_texture_rect.gd" id="3_l3hpe"]
[ext_resource type="Script" path="res://scenes/ui/inventory/count_label.gd" id="4_01ths"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pwifn"]

[node name="InventorySlotDragPreview" type="Panel"]
z_index = 99
custom_minimum_size = Vector2(65, 65)
offset_right = 65.0
offset_bottom = 65.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_pwifn")
script = ExtResource("2_2mdvm")

[node name="CenteredTextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("3_l3hpe")

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -26.0
offset_right = -6.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
horizontal_alignment = 2
script = ExtResource("4_01ths")
